<?xml version="1.0"?>
<package format="2">
  <name>pimouse_vision_control</name>
  <version>0.0.0</version>
  <description>The pimouse_vision_control package</description>

  <maintainer email="nzh_star@zzzstar.com">nzhoou</maintainer>
  <license>BSD</license>

  <author email="nzh_star@zzzstar.com">nzhoo</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>pimouse_ros</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
